--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/shumi_db
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
