add batch infra DONE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#debug
+spring.batch.job.names=elasticsearchMigrationJob
