add Elasticsearch config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 
-#debug
+# elasticsearch
+spring.elasticsearch.host=localhost:9200
+spring.elasticsearch.port=9200
+spring.elasticsearch.https=false
+
+# debug
 spring.batch.job.names=elasticsearchMigrationJob
