--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # elasticsearch
-spring.elasticsearch.host=localhost:9200
+spring.elasticsearch.host=localhost
 spring.elasticsearch.port=9200
 spring.elasticsearch.https=false
 
